--- a/index.html
+++ b/index.html
@@ -6,6 +6,33 @@
     <!-- <link rel="icon" href="img/favicon.ico" type="image/x-icon" /> -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+    <script type="text/javascript">
+    var c = new Image();
+
+    // c.onload = function() {
+    //     $(".pace-activity").css("background-image", "url(images/image-loader.png)");
+    // }
+    c.src = "images/image-loader.png";
+    // paceOptions = {
+    //     catchupTime: 100,
+    //     maxProgressPerFrame: 20,
+    //     ghostTime: Number.MAX_SAFE_INTEGER,
+    //     checkInterval: {
+    //         checkInterval: 100
+    //     },
+    //     eventLag: {
+    //         minSamples: 1,
+    //         sampleCount: 300,
+    //         lagThreshold: 0.1
+    //     }
+    // }   
+    // paceOptions = {
+    //     initialRate: 0.7,
+    //     minTime: 175,
+    //     maxProgressPerFrame: 1,
+    //     ghostTime: 120
+    // }
+    </script>
     <script type="text/javascript" src="js/pace.min.js"></script>
     <link type="text/css" rel="stylesheet" href="css/araka-style.css" media="screen,projection" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -160,7 +187,6 @@
         <!-- <div class="option" style="background: black;padding: 10px;">asdasdsa</div> -->
         <!-- JS -->
         <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
-        
         <script type="text/javascript" src="js/parallax.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/jquery.waypoints.min.js"></script>
