update about n service

--- a/services.html
+++ b/services.html
@@ -33,7 +33,6 @@
     <!-- <link rel="icon" href="img/favicon.ico" type="image/x-icon" /> -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
-    
     <script type="text/javascript" src="js/pace.min.js"></script>
     <link type="text/css" rel="stylesheet" href="css/araka-style.css" media="screen,projection" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -67,104 +66,92 @@
         <!-- /.container-fluid -->
     </nav>
     <div class="wrapper">
-        <section class="">
-            <div class="parallax-img" data-parallax="scroll" data-image-src="images/jumbo-home.jpg">
+        <section class="posrel">
+            <div class="parallax-img parallax-short" data-parallax="scroll" data-image-src="images/jumbo-services.jpg">
                 <div class="container">
-                    <div class="jumbotron">
-                        <h1>Welcome</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nec vero sum nescius esse utilitatem in historia, non modo voluptatem. Nec tamen ullo modo summum pecudis bonum et hominis idem mihi videri potest. Apud imperitos tum illa dicta sunt, aliquid etiam coronae datum; Duo Reges: constructio interrete. Conclusum est enim contra Cyrenaicos satis acute, nihil ad Epicurum. Et si turpitudinem fugimus in statu et motu corporis, quid est cur pulchritudinem non sequamur? </p>
+                    <div class="jumbotron color-inverse">
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <h1>ARAKA MEGA UTAMA</h1>
+                        <p>SERVICE</p>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="">
-            <div class="container">
-                <div class="obj-anim obj-anim-opening animated">
-                    <div class="jumbotron text-center">
-                        <h3>Hello, world!</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nec vero sum nescius esse utilitatem in historia, non modo voluptatem. Nec tamen ullo modo summum pecudis bonum et hominis idem mihi videri potest. Apud imperitos tum illa dicta sunt, aliquid etiam coronae datum; Duo Reges: constructio interrete. Conclusum est enim contra Cyrenaicos satis acute, nihil ad Epicurum. Et si turpitudinem fugimus in statu et motu corporis, quid est cur pulchritudinem non sequamur? </p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="content-part">
-            <div class="parallax-img" data-parallax="scroll" data-image-src="images/office.jpg"></div>
-        </section>
-        <section class="content-part">
+        <section class="content-part bg-gray-light">
             <div class="container">
                 <div class="obj-anim obj-anim-mission animated">
-                    <h3>Mission</h3>
                     <div class="row">
-                        <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                             <div class="text-center">
                                 <p><img src="images/mission-icon.jpg" class="img-responsive inblock"></p>
+                                <h3>DESIGN</h3>
                                 <p>Ea possunt paria non esse. Ne in odium veniam, si amicum destitero tueri. Semper enim ex eo, quod maximas partes continet latissimeque funditur, tota res appellatur. </p>
                             </div>
                         </div>
-                        <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                             <div class="text-center">
                                 <p><img src="images/mission-icon.jpg" class="img-responsive inblock"></p>
+                                <h3>CONTRACTOR</h3>
                                 <p>Ea possunt paria non esse. Ne in odium veniam, si amicum destitero tueri. Semper enim ex eo, quod maximas partes continet latissimeque funditur, tota res appellatur. </p>
                             </div>
                         </div>
-                        <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                             <div class="text-center">
                                 <p><img src="images/mission-icon.jpg" class="img-responsive inblock"></p>
-                                <p>Ea possunt paria non esse. Ne in odium veniam, si amicum destitero tueri. Semper enim ex eo, quod maximas partes continet latissimeque funditur, tota res appellatur. </p>
-                            </div>
-                        </div>
-                        <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
-                            <div class="text-center">
-                                <p><img src="images/mission-icon.jpg" class="img-responsive inblock"></p>
+                                <h3>IT</h3>
                                 <p>Ea possunt paria non esse. Ne in odium veniam, si amicum destitero tueri. Semper enim ex eo, quod maximas partes continet latissimeque funditur, tota res appellatur. </p>
                             </div>
                         </div>
                     </div>
                 </div>
         </section>
+        <section class="posrel">
+            <div class="clearfix">
+                <a href="modal/modal-service.html" data-toggle="modal" data-target="#modalService" class="col-xs-12 col-sm-6 col-md-6 col-lg-6 side-full">
+                    <div class="obj-anim obj-anim-left animated side-image bg-cover" style="background-image: url('images/serv-it.jpg')">
+                        <div class="item-abs item-bottom">
+                            <div class="panel-body color-inverse">
+                                <h3>IT &amp; DESIGN</h3>
+                                <p>Ea possunt paria non esse. Ne in odium veniam, si amicum destitero tueri. Semper enim ex eo, quod maximas partes continet latissimeque funditur, tota res appellatur. </p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="modal/modal-service.html" data-toggle="modal" data-target="#modalService" class="col-xs-12 col-sm-6 col-md-6 col-lg-6 side-full">
+                    <div class="obj-anim obj-anim-right animated side-image bg-cover" style="background-image: url('images/serv-cont.jpg')">
+                        <div class="item-abs item-bottom">
+                            <div class="panel-body color-inverse">
+                                <h3>GENERAL CONTRACTOR</h3>
+                                <p>Ea possunt paria non esse. Ne in odium veniam, si amicum destitero tueri. Semper enim ex eo, quod maximas partes continet latissimeque funditur, tota res appellatur. </p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </section>
         <section class="content-part">
-            <div class="parallax-img" data-parallax="scroll" data-image-src="images/initiatives.jpg">
-                <div class="desc-right">
-                    <div class="obj-anim obj-anim-init animated">
-                        <div class="text-center">
-                            <h3>ARAKA Initiatives</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nec vero sum nescius esse utilitatem in historia, non modo voluptatem. Nec tamen ullo modo summum pecudis bonum et hominis idem mihi videri potest. Apud imperitos tum illa dicta sunt, aliquid etiam coronae datum; Duo Reges: constructio interrete. Conclusum est enim contra Cyrenaicos satis acute, nihil ad Epicurum. Et si turpitudinem fugimus in statu et motu corporis, quid est cur pulchritudinem non sequamur. </p>
-                            <h3>Upcoming Initiatives</h3>
-                            <p>Lorem ipsum dolor sit amet
-                                <br>onsectetur adipiscing elit
-                                <br>Nec vero sum nescius esse utilitatem in historia </p>
+            <div class="container">
+                <div class="obj-anim obj-anim-opening animated">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                            <h3>OUR PROCESS</h3>
+                        </div>
+                        <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nec vero sum nescius esse utilitatem in historia, non modo voluptatem. Nec tamen ullo modo summum pecudis bonum et hominis idem mihi videri potest. Apud imperitos tum illa dicta sunt, aliquid etiam coronae datum; Duo Reges: constructio interrete. Conclusum est enim contra Cyrenaicos satis acute, nihil ad Epicurum. Et si turpitudinem fugimus in statu et motu corporis, quid est cur pulchritudinem non sequamur? </p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="content-part">
+        <section class="content-part bg-mapping">
             <div class="container">
-                <div class="obj-anim obj-anim-client animated">
-                    <h3>Our Client</h3>
-                    <div class="row">
-                        <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
-                            <div class="text-center">
-                                <p><img src="images/mission-icon.jpg" class="img-responsive inblock"></p>
-                            </div>
-                        </div>
-                        <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
-                            <div class="text-center">
-                                <p><img src="images/mission-icon.jpg" class="img-responsive inblock"></p>
-                            </div>
-                        </div>
-                        <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
-                            <div class="text-center">
-                                <p><img src="images/mission-icon.jpg" class="img-responsive inblock"></p>
-                            </div>
-                        </div>
-                        <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
-                            <div class="text-center">
-                                <p><img src="images/mission-icon.jpg" class="img-responsive inblock"></p>
-                            </div>
-                        </div>
-                    </div>
+                <div class="text-center obj-anim obj-anim-client animated">
+                    <img class="img-responsive" src="images/serv-mapping.jpg">
                 </div>
+            </div>
         </section>
         <footer>
             <div class="container">
@@ -183,6 +170,12 @@
                 </div>
             </div>
         </footer>
+        <!-- MODAL -->
+        <div class="modal fade" id="modalService" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content"> </div>
+            </div>
+        </div>
         <!-- <div class="option" style="background: black;padding: 10px;">asdasdsa</div> -->
         <!-- JS -->
         <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
