--- a/modal/modal-service.html
+++ b/modal/modal-service.html
@@ -1,6 +1,6 @@
 <div class="wrapper-infograp">
     <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="icon-close"></i></button>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="glyphicon glyphicon-remove"></i> <strong>CLOSE</strong></button>
     </div>
     <div class="modal-body">
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
@@ -13,27 +13,18 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <img src="..." alt="...">
-                    <div class="carousel-caption">
-                        ...
-                    </div>
+                    <img src="images/visi.jpg" class="img-responsive">
                 </div>
                 <div class="item">
-                    <img src="..." alt="...">
-                    <div class="carousel-caption">
-                        ...
-                    </div>
+                    <img src="images/misi.jpg" class="img-responsive">
                 </div>
-                ...
             </div>
             <!-- Controls -->
             <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
             </a>
             <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
                 <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
             </a>
         </div>
     </div>
